--- a/StackdVersion1/UI/Cell/SharedTableViewCell.xib
+++ b/StackdVersion1/UI/Cell/SharedTableViewCell.xib
@@ -81,20 +81,41 @@
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nbc-QW-HzW">
                             <rect key="frame" x="0.0" y="79.5" width="359" height="30.5"/>
                             <subviews>
-                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="hRN-sk-2eZ">
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HGn-xh-5FF">
                                     <rect key="frame" x="0.0" y="0.0" width="359" height="30.5"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="yO3-XJ-dHi">
+                                            <rect key="frame" x="0.0" y="0.0" width="359" height="30.5"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uoA-JK-PsM">
+                                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="30.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktg-qu-gjH">
+                                                    <rect key="frame" x="3" y="0.0" width="0.0" height="30.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4H-Jy-8dN">
+                                                    <rect key="frame" x="6" y="0.0" width="353" height="30.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hit-c7-P97">
-                                        <size key="itemSize" width="50" height="50"/>
-                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                    </collectionViewFlowLayout>
-                                    <connections>
-                                        <outlet property="dataSource" destination="-1" id="igh-gA-gjc"/>
-                                        <outlet property="delegate" destination="-1" id="2Tl-zA-26E"/>
-                                    </connections>
-                                </collectionView>
+                                    <constraints>
+                                        <constraint firstItem="yO3-XJ-dHi" firstAttribute="leading" secondItem="HGn-xh-5FF" secondAttribute="leading" id="3me-ng-c1N"/>
+                                        <constraint firstAttribute="trailing" secondItem="yO3-XJ-dHi" secondAttribute="trailing" id="7sO-vc-xk6"/>
+                                        <constraint firstAttribute="bottom" secondItem="yO3-XJ-dHi" secondAttribute="bottom" id="XDf-LT-CQP"/>
+                                        <constraint firstItem="yO3-XJ-dHi" firstAttribute="top" secondItem="HGn-xh-5FF" secondAttribute="top" id="s3C-tc-Rqr"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                         </stackView>
                     </subviews>
@@ -118,12 +139,14 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="collectionView" destination="hRN-sk-2eZ" id="Kd7-X5-ae1"/>
                 <outlet property="createdAt" destination="cNy-KI-pml" id="9ej-ga-KGc"/>
                 <outlet property="duration" destination="Uz1-tm-6JH" id="M6a-cX-wmh"/>
                 <outlet property="sourceLabel" destination="EWX-rt-9qt" id="1pW-co-7tW"/>
                 <outlet property="sourceLogo" destination="pUf-Pe-04y" id="hUf-UX-GG8"/>
                 <outlet property="sourceTitle" destination="Vah-Fa-3CF" id="g9t-Gp-d7t"/>
+                <outlet property="tagLabel1" destination="uoA-JK-PsM" id="ehP-Zf-clI"/>
+                <outlet property="tagLabel2" destination="ktg-qu-gjH" id="mVx-Fs-Um4"/>
+                <outlet property="tagLabel3" destination="I4H-Jy-8dN" id="8BL-5l-H8i"/>
             </connections>
             <point key="canvasLocation" x="57.5" y="328"/>
         </view>
