--- a/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
+++ b/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
@@ -21,34 +21,34 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="207"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="za6-Jn-RoW">
-                            <rect key="frame" x="5" y="4" width="375" height="199"/>
+                            <rect key="frame" x="5" y="4" width="365" height="199"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nge-7p-8CF" userLabel="Super Stack View">
-                                    <rect key="frame" x="3" y="0.0" width="375" height="199"/>
+                                    <rect key="frame" x="3" y="0.0" width="359" height="199"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="253" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jfL-1z-OuR" userLabel="Left Stack View">
-                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="199"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="253" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="jfL-1z-OuR" userLabel="Left Stack View">
+                                            <rect key="frame" x="0.0" y="0.0" width="243.5" height="199"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="p89-tc-8d1">
-                                                    <rect key="frame" x="0.0" y="0.0" width="261.5" height="179"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="1000" axis="vertical" distribution="fillProportionally" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="p89-tc-8d1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="243.5" height="142"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="PQu-x4-ofJ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="51.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="243.5" height="41"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bwk-4l-Ciw">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="261.5" height="51.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="183" height="41"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="4Hf-06-QdO">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="150" height="51.5"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="122.5" height="41"/>
                                                                             <subviews>
                                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cci-8O-Duh">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="51.5" height="51.5"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="41" height="41"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="width" secondItem="cci-8O-Duh" secondAttribute="height" multiplier="1:1" id="Fxk-d9-Kft"/>
                                                                                     </constraints>
                                                                                 </imageView>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Shared from Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jY-um-yje">
-                                                                                    <rect key="frame" x="52.5" y="0.0" width="148.5" height="51.5"/>
+                                                                                    <rect key="frame" x="42" y="0.0" width="80.5" height="41"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
@@ -56,7 +56,7 @@
                                                                             </subviews>
                                                                         </stackView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRz-Gi-DfY">
-                                                                            <rect key="frame" x="147" y="0.0" width="111.5" height="51.5"/>
+                                                                            <rect key="frame" x="122.5" y="0.0" width="60.5" height="41"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -67,7 +67,7 @@
                                                                     </constraints>
                                                                 </stackView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="createdAt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVy-Yf-iN4">
-                                                                    <rect key="frame" x="258.5" y="0.0" width="59.5" height="51.5"/>
+                                                                    <rect key="frame" x="184" y="0.0" width="59.5" height="41"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -75,7 +75,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="adkhafsljiafdkljafdlkasdfjhdilasfhadislfhadlfhalsdhfasldhfalidsfhaldshfalkds" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhx-WB-MVm">
-                                                            <rect key="frame" x="0.0" y="52.5" width="261.5" height="126.5"/>
+                                                            <rect key="frame" x="0.0" y="42" width="243.5" height="100"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -85,35 +85,39 @@
                                                         <constraint firstItem="PQu-x4-ofJ" firstAttribute="height" secondItem="p89-tc-8d1" secondAttribute="height" multiplier="1:3.5" id="acs-jV-9YY"/>
                                                     </constraints>
                                                 </stackView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="n7K-Uu-Vst">
-                                                    <rect key="frame" x="0.0" y="179" width="261.5" height="20"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" verticalHuggingPriority="252" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="n7K-Uu-Vst">
+                                                    <rect key="frame" x="0.0" y="142" width="243.5" height="57"/>
                                                     <subviews>
-                                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="253" verticalCompressionResistancePriority="1000" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="imP-g5-hLz">
-                                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="20"/>
-                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="20" id="lej-ER-eXq"/>
-                                                            </constraints>
-                                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VeE-sw-4ps">
-                                                                <size key="itemSize" width="50" height="50"/>
-                                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                                <inset key="sectionInset" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
-                                                            </collectionViewFlowLayout>
-                                                            <connections>
-                                                                <outlet property="dataSource" destination="-1" id="avr-2a-NKK"/>
-                                                                <outlet property="delegate" destination="-1" id="nSx-5C-5Qg"/>
-                                                            </connections>
-                                                        </collectionView>
+                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" horizontalCompressionResistancePriority="1000" text=" " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="3.5" translatesAutoresizingMaskIntoConstraints="NO" id="N3z-kL-wcW">
+                                                            <rect key="frame" x="0.0" y="0.0" width="3.5" height="57"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" horizontalCompressionResistancePriority="1000" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="3.5" translatesAutoresizingMaskIntoConstraints="NO" id="Li0-K2-UcU">
+                                                            <rect key="frame" x="5.5" y="0.0" width="186" height="57"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="253" horizontalCompressionResistancePriority="1000" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="3.5" translatesAutoresizingMaskIntoConstraints="NO" id="Hx7-bd-YMU">
+                                                            <rect key="frame" x="193.5" y="0.0" width="50" height="57"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="n7K-Uu-Vst" firstAttribute="height" secondItem="p89-tc-8d1" secondAttribute="height" multiplier="1.2:3" id="QBQ-cb-H5a"/>
+                                            </constraints>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="602-ON-RUw">
-                                            <rect key="frame" x="258.5" y="0.0" width="113.5" height="199"/>
+                                            <rect key="frame" x="253.5" y="0.0" width="105.5" height="199"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="hf6-Eu-WU8">
-                                                    <rect key="frame" x="0.0" y="0.0" width="113.5" height="199"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="105.5" height="199"/>
                                                 </imageView>
                                             </subviews>
                                         </stackView>
@@ -156,13 +160,15 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="collectionView" destination="imP-g5-hLz" id="Dnq-bT-iGz"/>
                 <outlet property="createdDate" destination="GVy-Yf-iN4" id="iG7-p5-GpE"/>
                 <outlet property="duration" destination="CRz-Gi-DfY" id="xjE-T8-Sql"/>
                 <outlet property="sourceImg" destination="hf6-Eu-WU8" id="eof-N6-N8g"/>
                 <outlet property="sourceLabel" destination="1jY-um-yje" id="jvl-CX-w8Y"/>
                 <outlet property="sourceLogo" destination="cci-8O-Duh" id="lKy-Zi-KUo"/>
                 <outlet property="sourceTitle" destination="zhx-WB-MVm" id="iQ8-bY-k3q"/>
+                <outlet property="tagLabel1" destination="N3z-kL-wcW" id="wUN-Qg-Yoa"/>
+                <outlet property="tagLabel2" destination="Li0-K2-UcU" id="hmP-fK-v65"/>
+                <outlet property="tagLabel3" destination="Hx7-bd-YMU" id="Gey-5R-3fT"/>
             </connections>
             <point key="canvasLocation" x="39.5" y="143.5"/>
         </view>
